# tsfm-energy-benchmark

./: .gitignore  LICENSE  Makefile  PROGETTO_1_SPECIFICA_TECNICA.md  README.md  arxiv_paper_latex.tex  arxiv_paper_latex_REVISED.tex  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/: benchmark_config.yaml
demo/: streamlit_app.py
docs/: CODE_DOCUMENTATION.md
experiments/context_length_study/: EXPERIMENT_DESIGN.md  README.md  analyze_results.py  dm_tests.py  prescriptive_analysis.py  robustness_analysis.py  run_chronos2_robustness.py  run_experiment.py  run_prophet_only.py  secondary_criteria_analysis.py  uncertainty_calibration.py
experiments/context_length_study/data/raw/: ercot_2020.parquet  ercot_2021.parquet  ercot_2022.parquet  ercot_2023.parquet  ercot_2024.parquet
experiments/context_length_study/results/figures/: calibration_analysis.csv  calibration_results.csv  chronos2_distribution_shift.csv  latency_analysis.csv  robustness_analysis.csv  robustness_distribution_shift.csv  robustness_extreme_events.csv  robustness_missing_data.csv  robustness_temporal_patterns.csv  secondary_criteria_ranking.csv  table1_summary.csv  table2_best_context.csv  table3_calibration.csv  table4_prescriptive_summary.csv
experiments/context_length_study/results/raw/: results_20260206_113318.csv  results_20260206_121718.csv  results_20260206_121913.csv  results_20260206_122010.csv  results_20260206_220349.csv  results_all_models.csv  results_combined.csv  results_partial.csv
notebooks/: 01_data_exploration.ipynb  02_model_comparison.ipynb  03_results_analysis.ipynb
paper/: arxiv_paper_latex_FINAL.tex
results/figures/: dm_test_results.csv
scripts/: download_data.py  run_benchmark.py
src/energy_benchmark/: __init__.py
src/energy_benchmark/data/: __init__.py  ercot_loader.py  preprocessing.py
src/energy_benchmark/evaluation/: __init__.py  benchmark.py  metrics.py
src/energy_benchmark/models/: __init__.py  base.py  chronos2.py  chronos_bolt.py  lag_llama.py  moirai.py  prophet_model.py  statistical.py  tinytimemixer.py
src/energy_benchmark/visualization/: __init__.py  plots.py
tests/: test_benchmark.py  test_data_loader.py  test_metrics.py  test_models.py
