[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-benchmark"
version = "0.1.0"
description = "Benchmark of Time Series Foundation Models for energy load forecasting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Luigi Simeone"},
]
keywords = ["time-series", "forecasting", "energy", "benchmark", "foundation-models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "requests>=2.31",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
models = [
    "chronos-forecasting>=2.2",  # Required for Chronos-2 (Chronos2Pipeline)
    "gluonts>=0.14",
    "pmdarima>=2.0",
    "properscoring>=0.1",
    "uni2ts>=1.0",      # Required by moirai.py (Moirai-2)
    "prophet>=1.1",     # Required by Prophet baseline
    "scipy>=1.11",      # Required by moirai.py (interpolate module)
    # Note: granite-tsfm (required for TTM) must be installed separately:
    # pip install git+https://github.com/ibm-granite/granite-tsfm.git
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
]
all = ["energy-benchmark[models,dev]"]

[project.urls]
Homepage = "https://github.com/PhysicsInforMe/tsfm-energy-benchmark"
Repository = "https://github.com/PhysicsInforMe/tsfm-energy-benchmark"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
